WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
82755
ESC key in full screen does not result in webkitFullScreenChange event.
https://bugs.webkit.org/show_bug.cgi?id=82755
Summary
ESC key in full screen does not result in webkitFullScreenChange event.
Jer Noble
Reported
2012-03-30 11:05:54 PDT
ESC key in full screen does not result in webkitFullScreenChange event.
Attachments
Patch
(9.32 KB, patch)
2012-03-30 11:15 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Patch
(10.62 KB, patch)
2012-03-30 11:33 PDT
,
Jer Noble
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Jer Noble
Comment 1
2012-03-30 11:06:41 PDT
<
rdar://problem/11093513
>
Jer Noble
Comment 2
2012-03-30 11:15:12 PDT
Created
attachment 134842
[details]
Patch
Build Bot
Comment 3
2012-03-30 11:22:24 PDT
Comment on
attachment 134842
[details]
Patch
Attachment 134842
[details]
did not pass mac-ews (mac): Output:
http://queues.webkit.org/results/12266418
Jer Noble
Comment 4
2012-03-30 11:33:39 PDT
Created
attachment 134847
[details]
Patch Edit the WebCore.exp.in file instead of the ExportFileGenerator.cpp file directly.
Darin Fisher (:fishd, Google)
Comment 5
2012-04-02 23:26:08 PDT
A similar patch for Chromium is here:
https://bugs.webkit.org/show_bug.cgi?id=82760
WebKit Review Bot
Comment 6
2012-04-03 10:34:08 PDT
Comment on
attachment 134847
[details]
Patch Clearing flags on attachment: 134847 Committed
r113056
: <
http://trac.webkit.org/changeset/113056
>
WebKit Review Bot
Comment 7
2012-04-03 10:34:13 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug