Source/WebKit/mac/WebView/WebFullScreenController.mm
@@ -155,7 +155,7 @@ static IntRect screenRectOfContents(Element* element)
 
 - (void)cancelOperation:(id)sender
 {
-    [self performSelector:@selector(exitFullScreen) withObject:nil afterDelay:0];
+    [self performSelector:@selector(requestExitFullScreen) withObject:nil afterDelay:0];
 }
 
 #pragma mark -
@@ -288,6 +288,13 @@ static IntRect screenRectOfContents(Element* element)
         NSEnableScreenUpdates();
     } else
         [_scaleAnimation.get() stopAnimation];
+}
+
+- (void)requestExitFullScreen
+{
+    if (!_element)
+        return;
+    _element->document()->webkitCancelFullScreen();
 }
 
 - (void)exitFullScreen
