Source/WebKit2/WebProcess/FullScreen/WebFullScreenManager.h
@@ -69,6 +69,7 @@ protected:
     WebFullScreenManager(WebPage*);
 
     void setAnimatingFullScreen(bool);
+    void requestExitFullScreen();
 
     void didReceiveWebFullScreenManagerMessage(CoreIPC::Connection*, CoreIPC::MessageID, CoreIPC::ArgumentDecoder*);
 
